[gd_scene load_steps=3 format=3 uid="uid://cw4qtniw6cwtg"]

[ext_resource type="Theme" uid="uid://cet12s7ldeodg" path="res://themes/theme_ui.tres" id="1_3f7q0"]
[ext_resource type="Script" uid="uid://dtirah22vlv4u" path="res://scripts/stats.gd" id="2_fk87l"]

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3f7q0")
script = ExtResource("2_fk87l")

[node name="TitleMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/margin_top = 40

[node name="Label" type="RichTextLabel" parent="TitleMarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
text = "الاحصائيات"
fit_content = true
horizontal_alignment = 1

[node name="StatsMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -108.5
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 31

[node name="VBoxContainer" type="VBoxContainer" parent="StatsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="wins" type="RichTextLabel" parent="StatsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
text = "فوز:"
fit_content = true
horizontal_alignment = 2

[node name="wins_solo" type="RichTextLabel" parent="StatsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
text = "فوز (فردي):"
fit_content = true
horizontal_alignment = 2

[node name="losses" type="RichTextLabel" parent="StatsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
text = "خسارة:"
fit_content = true
horizontal_alignment = 2

[node name="losses_solo" type="RichTextLabel" parent="StatsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
text = "خسارة (فردي):"
fit_content = true
horizontal_alignment = 2

[node name="ties" type="RichTextLabel" parent="StatsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
text = "تعادل:"
fit_content = true
horizontal_alignment = 2

[node name="used_hint" type="RichTextLabel" parent="StatsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
text = "استخدمت مساعدة:"
fit_content = true
horizontal_alignment = 2

[node name="ButtonMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40

[node name="Button" type="Button" parent="ButtonMarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "⬅️"

[connection signal="pressed" from="ButtonMarginContainer/Button" to="." method="_on_button_pressed"]
